# AoC2021

./: .gitignore  AoC2021.cabal  README.md
app/: Main.hs
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
