cabal-version:      3.0
name:               AoC2021
version:            0.1.0.0
synopsis:           advent of code 2021 in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/MrPicklePinosaur/AoC2021

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniel Liu
maintainer:         mr.picklepinosaur@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day1 Day2 Day3 Day4 Day5

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable AoC2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        AoC2021

    hs-source-dirs:   app
    default-language: Haskell2010
